Bug 1805761 - Increase the child process shutdown timeout for Windows ccov. r=ipc-reviewers,nika

Differential Revision: https://phabricator.services.mozilla.com/D164872